--- a/conf/default.conf
+++ b/conf/default.conf
@@ -1,4 +1,7 @@
 server {
+    error_log /dev/stdout info;
+    access_log /dev/stdout;
+
     listen 80 default_server;
     listen [::]:80 default_server ipv6only=on;
 
